log
Sun 21 Aug 2022 04:48:05 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = 0;
      |       ^~
Compilation failed
28e288b
Sun 21 Aug 2022 04:48:21 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = 0;
      |       ^~
Compilation failed
e38a19b
Sun 21 Aug 2022 04:49:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = NULL;
      |       ^~
Compilation failed
9dcdee6
Sun 21 Aug 2022 04:49:16 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = NULL;
      |       ^~
Compilation failed
f7af417
Sun 21 Aug 2022 04:49:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4485440
